# rt-app-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  PORT_STATUS.md  README.md  RUST_SAFETY.md  validate.sh
.beads/: config.yaml
.beads/issues/: rtapp-075d2.md  rtapp-1.md  rtapp-10.md  rtapp-11.md  rtapp-12.md  rtapp-13.md  rtapp-1ec29.md  rtapp-2.md  rtapp-3.md  rtapp-4.md  rtapp-450e3.md  rtapp-49a52.md  rtapp-4b15d.md  rtapp-5.md  rtapp-52f69.md  rtapp-6.md  rtapp-64b8f.md  rtapp-7.md  rtapp-76895.md  rtapp-7c9cd.md  rtapp-8.md  rtapp-812a2.md  rtapp-821aa.md  rtapp-9.md  rtapp-f4bb8.md  rtapp-f81ac.md
.claude/skills/sync-upstream/: SKILL.md
.github/workflows/: ci.yml  sync-upstream.yml
bug_finding/: Cargo.toml
bug_finding/src/: comparator.rs  generator.rs  main.rs  runner.rs
doc/: tutorial.md
doc/examples/: template.json
doc/examples/tutorial/: example4.yaml
src/: affinity.rs  args.rs  conversions.rs  gnuplot.rs  lib.rs  main.rs  syscalls.rs  taskgroups.rs  types.rs  utils.rs
src/config/: global.rs  mod.rs  resources.rs  tasks.rs
src/engine/: calibration.rs  events.rs  mod.rs  scheduling.rs  timing.rs
tests/: compat_format.rs  integration_tests.rs
tests/compat/: compat_test.sh
tests/fixtures/: template.yaml
tests/fixtures/failures/: failure_11.json  failure_22.json  failure_23.json
tests/fixtures/tutorial/: example1.yaml
