[package]
name = "rt-app-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Stress-testing / fuzzer tool for comparing C rt-app and rt-app-rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
